error3.log

> Configure project :
Fabric Loom: 1.15.4

> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileClientJava FAILED
C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:433: error: ';' expected
               })));
                  ^
1 error


FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileClientJava'.
[Incubating] Problems report is available at: file:///C:/Users/frand/Documents/bomboaddons-1.21.10/build/reports/problems/problems-report.html
> Compilation failed; see the compiler output below.
  C:\Users\frand\Documents\bomboaddons-1.21.10\src\client\java\me\bombo\bomboaddons\BomboaddonsClient.java:433: error: ';' expected
                 })));
                    ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
3 actionable tasks: 1 executed, 2 up-to-date
